# browserver

./: README.md  main.py  pyproject.toml
client/: index.html
